Bug 248628 - While in the console mode, 8 logos sometimes appear on my screen.
Summary: While in the console mode, 8 logos sometimes appear on my screen.
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: amd64 Any
: --- Affects Many People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
: 253419 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-12 15:08 UTC by Oleg
Modified: 2024-01-19 16:21 UTC (History)
10 users (show)

See Also:


Attachments
8 BSD logos (33 bytes, text/plain)
2020-08-12 15:16 UTC, Oleg
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2020-08-12 15:08:46 UTC
This problem has existed for many months already. While I am on the console (x11 or wayland are not loaded), 8 BSD logos sometimes appear in the left corner of my screen. The problem can be seen in the attachment provided. I use drm-devel-kmod/i915kms. I am running FreeBSD 13.0-CURRENT r364115, but as I said, this problem has existed for many months already.
Comment 1 Oleg 2020-08-12 15:16:08 UTC
Created attachment 217170 [details]
8 BSD logos
Comment 2 Li-Wen Hsu freebsd_committer freebsd_triage 2020-08-12 15:30:32 UTC
Comment on attachment 217170 [details]
8 BSD logos

Turn the attachment content into comment:

https://pasteboard.co/Jm2tkQw.jpg
Comment 3 Conrad Meyer freebsd_committer freebsd_triage 2020-08-12 23:43:59 UTC
This seems like it might be a bug in VT splash CPUs; as a workaround, the (non-default) splash cpus can be disabled by removing kern.vt.splash_cpu from loader.conf and sysctl.conf, or by setting a zero value.
Comment 4 Ed Maste freebsd_committer freebsd_triage 2020-08-19 14:25:31 UTC
While investigating PR 211922 I observed orb logos, despite kern.vt.splash_cpu=0.
Comment 5 Rajeev Pillai 2020-10-19 07:54:11 UTC
I'm seeing this in FreeBSD 12.2-RC3 amd64 also. It is extremely reproducible:

1. In the framebuffer console run yes(1).
2. Left-click and drag the mouse.
3. Switch to another console.

The orb logos (4, equalling the no. of CPUs) appear at the top-left corner
and then the mouse pointer cannot be brought to the bottom of the screen
anymore. It stops at what looks like (fb_height - orb_logo_height) of the
screen.
Comment 6 Steve Wills freebsd_committer freebsd_triage 2020-11-10 15:28:33 UTC
This patch seemed to fix it for me:

https://people.freebsd.org/~manu/0001-vt-Disable-splash_cpu-when-replacing-the-backend.patch
Comment 7 Oleg 2020-11-10 17:24:15 UTC
(In reply to Steve Wills from comment #6)
It doesn't fix the issue for me.
Comment 8 Rajeev Pillai 2020-11-12 02:51:10 UTC
(In reply to Steve Wills from comment #6)

That patch doesn't work for me either on FreeBSD 12.2-RELEASE with efifb.
Comment 9 Ed Maste freebsd_committer freebsd_triage 2021-02-11 00:06:18 UTC
*** Bug 253419 has been marked as a duplicate of this bug. ***
Comment 10 Ed Maste freebsd_committer freebsd_triage 2021-02-11 00:06:48 UTC
reported again on 13 in PR253419
Comment 11 freebsd 2021-03-15 05:17:01 UTC
(In reply to Conrad Meyer from comment #3)

Setting "kern.vt.splash_cpu" to 0 only changes the content of the image. On FreeBSD 12-STABLE, that changed red head orbs to sitting penguins.
Comment 12 Oleg Bulyzhin freebsd_committer freebsd_triage 2021-09-22 16:05:15 UTC
I've got the same problem with my new dell vostro 5415. I've spent some time on debugging, here are results:

1) this happens due to buffer overflow inside vt(4) - internal variable vt_draw_logo_cpus gets non-zero value, this why we see those logos.

2) i'm not sure about security issues with this problem, thus i'll post mail to secteam@ before revealing the fix.
Comment 13 commit-hook freebsd_committer freebsd_triage 2021-09-23 13:52:38 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=dbc7ca59451561a179f9852642e13ef024169d84

commit dbc7ca59451561a179f9852642e13ef024169d84
Author:     Ed Maste <emaste@FreeBSD.org>
AuthorDate: 2021-09-22 18:41:00 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2021-09-23 13:51:36 +0000

    vt: bound buffer access in redraw optimization

    PR:             248628
    Reported by:    oleg
    Reviewed by:    cem, oleg (both earlier)
    Fixes:          ee97b2336aa4 ("Speed up vt(4) by keeping...")
    MFC after:      3 days
    Sponsored by:   The FreeBSD Foundation
    Differential Revision:  https://reviews.freebsd.org/D32059

 sys/dev/vt/hw/fb/vt_fb.c   | 6 ++++++
 sys/dev/vt/hw/vga/vt_vga.c | 6 ++++++
 2 files changed, 12 insertions(+)
Comment 14 commit-hook freebsd_committer freebsd_triage 2021-09-25 18:15:02 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=9352de39c3dcc94f2745f939e52388a8e1cc1c05

commit 9352de39c3dcc94f2745f939e52388a8e1cc1c05
Author:     Ed Maste <emaste@FreeBSD.org>
AuthorDate: 2021-09-22 18:41:00 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2021-09-25 18:14:12 +0000

    vt: bound buffer access in redraw optimization

    PR:             248628
    Reported by:    oleg
    Reviewed by:    cem, oleg (both earlier)
    Fixes:          ee97b2336aa4 ("Speed up vt(4) by keeping...")
    MFC after:      3 days
    Sponsored by:   The FreeBSD Foundation
    Differential Revision:  https://reviews.freebsd.org/D32059

    (cherry picked from commit dbc7ca59451561a179f9852642e13ef024169d84)

 sys/dev/vt/hw/fb/vt_fb.c   | 6 ++++++
 sys/dev/vt/hw/vga/vt_vga.c | 6 ++++++
 2 files changed, 12 insertions(+)
Comment 15 commit-hook freebsd_committer freebsd_triage 2021-09-25 18:15:04 UTC
A commit in branch stable/12 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=e4fcff8ee124f8faed2f1fcc1e15b7ae6906d4d7

commit e4fcff8ee124f8faed2f1fcc1e15b7ae6906d4d7
Author:     Ed Maste <emaste@FreeBSD.org>
AuthorDate: 2021-09-22 18:41:00 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2021-09-25 16:32:06 +0000

    vt: bound buffer access in redraw optimization

    PR:             248628
    Reported by:    oleg
    Reviewed by:    cem, oleg (both earlier)
    Fixes:          ee97b2336aa4 ("Speed up vt(4) by keeping...")
    MFC after:      3 days
    Sponsored by:   The FreeBSD Foundation
    Differential Revision:  https://reviews.freebsd.org/D32059

    (cherry picked from commit dbc7ca59451561a179f9852642e13ef024169d84)

 sys/dev/vt/hw/fb/vt_fb.c   | 6 ++++++
 sys/dev/vt/hw/vga/vt_vga.c | 6 ++++++
 2 files changed, 12 insertions(+)
Comment 16 commit-hook freebsd_committer freebsd_triage 2022-01-11 18:15:30 UTC
A commit in branch releng/13.0 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=3e0a1e12416996b63949de2b11ca74a0e0d70bd5

commit 3e0a1e12416996b63949de2b11ca74a0e0d70bd5
Author:     Ed Maste <emaste@FreeBSD.org>
AuthorDate: 2021-09-22 18:41:00 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2022-01-10 14:51:54 +0000

    vt: bound buffer access in redraw optimization

    PR:             248628
    Reported by:    oleg
    Reviewed by:    cem, oleg (both earlier)
    Fixes:          ee97b2336aa4 ("Speed up vt(4) by keeping...")
    MFC after:      3 days
    Sponsored by:   The FreeBSD Foundation
    Differential Revision:  https://reviews.freebsd.org/D32059

    (cherry picked from commit dbc7ca59451561a179f9852642e13ef024169d84)
    (cherry picked from commit e4fcff8ee124f8faed2f1fcc1e15b7ae6906d4d7)

    Approved by:    so
    Security:       FreeBSD-SA-22:01.vt

 sys/dev/vt/hw/fb/vt_fb.c   | 6 ++++++
 sys/dev/vt/hw/vga/vt_vga.c | 6 ++++++
 2 files changed, 12 insertions(+)
Comment 17 commit-hook freebsd_committer freebsd_triage 2022-01-11 18:32:38 UTC
A commit in branch releng/12.2 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=9c9d0d90512f0e5950b179d1a07f717ad7c8fe28

commit 9c9d0d90512f0e5950b179d1a07f717ad7c8fe28
Author:     Ed Maste <emaste@FreeBSD.org>
AuthorDate: 2021-09-22 18:41:00 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2022-01-10 18:04:06 +0000

    vt: bound buffer access in redraw optimization

    PR:             248628
    Reported by:    oleg
    Reviewed by:    cem, oleg (both earlier)
    Fixes:          ee97b2336aa4 ("Speed up vt(4) by keeping...")
    MFC after:      3 days
    Sponsored by:   The FreeBSD Foundation
    Differential Revision:  https://reviews.freebsd.org/D32059

    (cherry picked from commit dbc7ca59451561a179f9852642e13ef024169d84)
    (cherry picked from commit e4fcff8ee124f8faed2f1fcc1e15b7ae6906d4d7)

    Approved by:    so
    Security:       FreeBSD-SA-22:01.vt

 sys/dev/vt/hw/fb/vt_fb.c   | 6 ++++++
 sys/dev/vt/hw/vga/vt_vga.c | 6 ++++++
 2 files changed, 12 insertions(+)